2023-04 Feature Update to Version Next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -935,16 +935,16 @@ section {
 /*--------------------------------------------------------------
 # Connect Section
 --------------------------------------------------------------*/
-.connect .img, .socials .img {
+.connect .img {
   border-radius: 8px;
   overflow: hidden;
 }
 
-.connect .img img, .socials .img img {
+.connect .img img {
   transition: 0.6s;
 }
 
-.connect .details, .socials .details {
+.connect .details {
   padding-top: 34px;
   padding-right: 30px;
   padding-bottom: 9px;
@@ -961,7 +961,7 @@ section {
   box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
 }
 
-.connect .details .icon, .socials .details .icon {
+.connect .details .icon {
   margin: 0;
   width: 72px;
   height: 72px;
@@ -971,7 +971,7 @@ section {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  color: #000;
+  color: #fff;
   font-size: 28px;
   transition: ease-in-out 0.3s;
   position: absolute;
@@ -980,22 +980,34 @@ section {
   border: 6px solid #9b043c;
 }
 
-.connect .details h3, .socials .details h3 {
+.connect .details h3 {
   color: #fff;
   font-weight: 700;
   margin: 10px 0 15px 0;
   font-size: 22px;
   transition: ease-in-out 0.3s;
+  cursor: default;
 }
 
-.connect .details p, .socials .details p {
+.connect .details p {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
   color: #fff;
 }
 
-.connect .service-item:hover .details h3, .socials .service-item:hover .details h3 {
+.connect p.socials a {
+  line-height: 24px;
+  font-size: 20px;
+  margin-bottom: 0;
+  color: #fff;
+}
+
+.connect p.socials a:hover {
+  color: #a80742;
+}
+
+.connect .service-item:hover .details h3 {
   color: #a80742;
 }
 
@@ -1004,11 +1016,11 @@ section {
   border: 2px solid #6d032a;
 }
 
-.connect .service-item:hover .details .icon i, .socials .service-item:hover .details .icon i {
-  color: #000;
+.connect .service-item:hover .details .icon i {
+  color: #fff;
 }
 
-.connect .service-item:hover .img img, .socials .service-item:hover .img img {
+.connect .service-item:hover .img img {
   transform: scale(1.2);
 }
 
