--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,6 +603,7 @@ section {
   overflow: hidden;
   z-index: 1;
   background: rgba(69, 80, 91, 0.8);
+  border-radius: 8px;
 }
 
 .portfolio .portfolio-wrap::before {
