--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 a {
-  color: #f3015a;
+  color: #e0bc00;
   text-decoration: none;
 }
 
@@ -47,7 +47,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #f3015a;
+  background: #e0bc00;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -89,7 +89,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #f3015a;
+  border: 6px solid #e0bc00;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -216,7 +216,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   color: #fff;
-  background: #f3015a;
+  background: #e0bc00;
 }
 
 .nav-menu a:hover span,
@@ -271,7 +271,7 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #f3015a;
+  background-color: #e0bc00;
 }
 
 /*--------------------------------------------------------------
@@ -319,7 +319,7 @@ h6 {
 }
 
 #hero p span {
-  color: #f3015a;
+  color: #e0bc00;
   letter-spacing: 1px;
   cursor: default;
 }
@@ -331,7 +331,7 @@ h6 {
 #hero .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: #f3015a;
+  color: #e0bc00;
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
@@ -389,7 +389,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #f3015a;
+  background: #e0bc00;
   bottom: 0;
   left: calc(50% - 20px);
   border-radius: 20px;
@@ -406,7 +406,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #f3015a;
+  color: #e0bc00;
   cursor: default;
 }
 
@@ -435,7 +435,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #f3015a;
+  color: #e0bc00;
   line-height: 0;
   cursor: default;
 }
@@ -499,7 +499,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #f3015a;
+  background-color: #e0bc00;
 }
 
 .skills-category {
@@ -524,7 +524,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #f3015a;
+  border-left: 2px solid #e0bc00;
   position: relative;
   cursor: default;
 }
@@ -535,14 +535,14 @@ section {
   font-weight: bolder;
   text-transform: uppercase;
   font-family: "DM Sans", sans-serif;
-  color: #f3015a;
+  color: #e0bc00;
   margin-bottom: 10px;
   cursor: default;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f3015a;
+  background: #e0bc00;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -572,7 +572,7 @@ section {
   left: -9px;
   top: 0;
   background: #18191a;
-  border: 2px solid #f3015a;
+  border: 2px solid #e0bc00;
   cursor: default;
 }
 
@@ -608,7 +608,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #f3015a;
+  color: #e0bc00;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -711,7 +711,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #f3015a;
+  color: #e0bc00;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -757,11 +757,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #f3015a;
+  border: 1px solid #e0bc00;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f3015a;
+  background-color: #e0bc00;
 }
 
 .portfolio-details .portfolio-info {
@@ -860,7 +860,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #f3015a;
+  background: #e0bc00;
   color: #fff;
 }
 
@@ -986,7 +986,7 @@ section {
   margin: 0;
   width: 72px;
   height: 72px;
-  background: #f3015a;
+  background: #e0bc00;
   border-radius: 50px;
   display: flex;
   align-items: center;
@@ -1079,7 +1079,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #f3015a;
+  background: #e0bc00;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
