--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ a {
 }
 
 a:hover {
-  color: #a80742;
+  color: #695e27;
   text-decoration: none;
 }
 
@@ -1140,13 +1140,13 @@ h3.summary-tit {
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
-  color: #fff;
+  color: #000;
   font-size: 28px;
   transition: ease-in-out 0.3s;
   position: absolute;
   top: -36px;
   left: calc(50% - 36px);
-  border: 6px solid #9b043c;
+  border: 6px solid #7c6802;
 }
 
 .connect .details h3 {
@@ -1173,17 +1173,17 @@ h3.summary-tit {
 }
 
 .connect p.socials a:hover {
-  color: #a80742;
+  color: #695e27;
 }
 
 .connect .service-item:hover .details h3 {
-  color: #a80742;
+  color: #695e27;
 }
 
 .connect .service-item:hover .details .icon,
 .socials .service-item:hover .details .icon {
-  background-color: #a80742;
-  border: 2px solid #6d032a;
+  background-color: #695e27;
+  border: 2px solid #947c03;
 }
 
 .connect .service-item:hover .details .icon i {
@@ -1241,7 +1241,7 @@ h3.summary-tit {
 }
 
 #footer .social-links a:hover {
-  background: #a80742;
+  background: #695e27;
   color: #fff;
   text-decoration: none;
 }
