--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-/**
-* TO DO: Move @media, make it more responsive (xxpx to xxxpx etc)
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -958,10 +954,6 @@ section {
   }
 }
 
-
-
-
-
 /*--------------------------------------------------------------
 # Timelines Section
 --------------------------------------------------------------*/
@@ -1005,56 +997,12 @@ blockquote {
   border-radius: 1em;
 }
 
-.timelines .nav-link.active {
-  transition: 0.3s;
-  background: #e0bc00;
-  border-color: var(--color-primary);
-}
-
-.timelines .nav-link.active h4 {
-  color: #2c2a25;
-}
-
-.timelines .nav-link.active i {
-  color: #2c2a25 !important;
-}
-
-.timelines .tab-content {
-  margin-top: 30px;
-}
-
-.timelines .tab-pane.active {
-  -webkit-animation: fadeIn 0.5s ease-out;
-  animation: fadeIn 0.5s ease-out;
-}
-
-.timelines .tab-pane h3 {
-  font-weight: bold;
-  font-size: 30px;
-  color: #fff;
-}
-
-.timelines .tab-pane ul {
-  list-style: none;
-  padding: 0;
-}
-
-.timelines .tab-pane ul li {
-  padding-bottom: 10px;
-  color: #fff;
-  cursor: default;
-}
-
-.timelines .tab-pane ul i {
-  font-size: 21px;
-  margin-right: 4px;
-  color: #a83f3f;
-}
 
 h3.summary-tit {
   margin-bottom: 0;
   margin: 3%;
   margin-left: 0%;
+  margin-top: 5%;
   font-weight: 700;
 }
 
@@ -1091,19 +1039,6 @@ h3.summary-tit {
     margin-left: calc(-.5 * var(--bs-gutter-x));
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
