2023-05 Feature Update to Version Next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1128,7 +1128,7 @@ h3.summary-tit {
 }
 
 .connect .service-item:hover .details .icon i {
-  color: #fff;
+  color: #000;
 }
 
 .connect .service-item:hover .img img {
