--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ h6 {
 }
 
 #profile-picture {
-  background-image: url("/assets/img/about.png");
+  background-image: url("img/about.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
