--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ h6 {
   transition: 0.3s;
   font-size: 15px;
   border-radius: 50px;
-  background: #494042;
+  background: #131c29;
   height: 56px;
   width: 100%;
   overflow: hidden;
@@ -312,7 +312,7 @@ h6 {
 
 #media {
   margin-top: 60px;
-  width: 370px;
+  width: 415px;
   display: flex;
   justify-content: space-between;
 }
@@ -379,15 +379,6 @@ h6 {
   margin-top: 30px;
 }
 
-#hero .social-links a {
-  font-size: 24px;
-  display: inline-block;
-  color: #37619e;
-  line-height: 1;
-  margin-right: 20px;
-  transition: 0.3s;
-}
-
 
 @media (max-width: 992px) {
   #hero {
@@ -404,6 +395,13 @@ h6 {
     margin-bottom: 10px;
     font-size: 25px;
     line-height: 24px;
+  }
+
+  #media {
+    margin-top: 60px;
+    width: 330px;
+    display: flex;
+    justify-content: space-between;
   }
 }
 
@@ -440,7 +438,8 @@ h6 {
   box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
 }
 
-.about-me .details .icon {
+
+.about-me .details .icon  {
   margin: 0;
   width: 72px;
   height: 72px;
