--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,19 +339,6 @@ h6 {
   position: relative;
 }
 
-#hero-works {
-  width: 100%;
-  height: 50vh;
-  background-size: cover;
-  position: relative;
-  padding: 0;
-}
-
-@media (min-width: 992px) {
-  #hero {
-    padding-left: 160px;
-  }
-}
 
 #hero:before {
   content: "";
@@ -851,17 +838,18 @@ section {
 }
 
 .portfolio-details .portfolio-info h3 {
-  font-size: 22px;
+  font-size: 30px;
   font-weight: 700;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #eee;
+  text-align: center;
 }
 
 .portfolio-details .portfolio-info ul {
   list-style: none;
   padding: 0;
-  font-size: 15px;
+  font-size: 19px;
 }
 
 .portfolio-details .portfolio-info ul li+li {
@@ -904,6 +892,17 @@ section {
   color: #fff;
   margin-bottom: 19px;
   line-height: 1.4em;
+}
+
+.btn-outline-download {
+  color: #37619e;
+  border-color: #37619e;
+  margin-top: 1em;
+}
+
+.btn-outline-download:hover {
+  color: #000;
+  background-color: #37619e;
 }
 
 /*--------------------------------------------------------------
