2024-xx Cumulative Update (2.3.xx)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -907,6 +907,11 @@ section {
 
 
 /*  */
+
+h6 a {
+  color: #fff;
+}
+
 .port-cover.overlay:before {
   background: rgba(0, 0, 0, 0.748);
   position: absolute;
