--- a/assets/css/style_ported.css
+++ b/assets/css/style_ported.css
@@ -2,18 +2,18 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
   color: #fff;
   background-color: #18191a;
 }
 
 a {
-  color: #b08657;
+  color: #37619e;
   text-decoration: none;
 }
 
 a:hover {
-  color: #a80742;
+  color: #407edb;
   text-decoration: none;
 }
 
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "DM Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .center-block {
@@ -31,6 +31,7 @@ h6 {
   margin-left: auto;
   margin-right: auto;
 }
+
 
 
 /*--------------------------------------------------------------
@@ -43,7 +44,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #b08657;
+  background: #37619e;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +58,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #70573a;
+  background: #407edb;
   color: #fff;
 }
 
@@ -85,7 +86,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #b08657;
+  border: 6px solid #37619e;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -136,9 +137,10 @@ h6 {
 }
 
 @media (min-width: 991px) {
-  #main {
-    margin-left: 100px;
-  }
+  /* #main {
+    margin-left: 90px;
+    margin-right: 60px;
+  } */
 
 
 }
@@ -170,12 +172,13 @@ h6 {
   display: flex;
   align-items: center;
   color: #fff;
-  padding: 10px 18px;
+  padding: 17px;
+  padding-left: 17px;
   margin-bottom: 8px;
   transition: 0.3s;
   font-size: 15px;
-  border-radius: 50px;
-  background: #494042;
+  border-radius: 30px;
+  background: #131c29;
   height: 56px;
   width: 100%;
   overflow: hidden;
@@ -212,7 +215,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   color: #fff;
-  background: #b08657;
+  background: #37619e;
 }
 
 .nav-menu a:hover span,
@@ -242,7 +245,7 @@ h6 {
   top: 10px;
   z-index: 9998;
   border: 0;
-  background: #494042;
+  background: #131c29;
   font-size: 30px;
   transition: all 0.4s;
   outline: none !important;
@@ -267,38 +270,76 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #b08657;
+  background-color: #37619e;
 }
 
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#centered-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#profile-picture {
+  background-image: url("../img/about.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 110px;
+  width: 270px;
+  height: 270px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+#title {
+  margin-top: 24px;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  display: block;
+  cursor: default;
+}
+
+#position {
+  font-size: 20px;
+  color: #407edb;
+  text-align: center;
+  display: block;
+  cursor: default;
+}
+
+#media {
+  margin-top: 60px;
+  width: 415px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.media_link {
+  color: #ffffff;
+  transition: all .083s ease-in-out;
+}
+
+.media_link:hover {
+  transform: translateY(-2px);
+  opacity: 1;
+}
+
+
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png") top center no-repeat;
+  background: url("../img/hero-bg.png") top right no-repeat;
   background-size: cover;
   position: relative;
+  backdrop-filter: blur(5px);
 }
 
-#hero .hero-container {
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-@media (min-width: 992px) {
-  #hero {
-    padding-left: 160px;
-  }
-}
 
 #hero:before {
   content: "";
@@ -323,12 +364,12 @@ h6 {
   color: #45505b;
   margin: 15px 0 0 0;
   font-size: 26px;
-  font-family: "DM Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
   cursor: default;
 }
 
 #hero p span {
-  color: #b08657;
+  color: #37619e;
   letter-spacing: 1px;
   cursor: default;
 }
@@ -337,18 +378,6 @@ h6 {
   margin-top: 30px;
 }
 
-#hero .social-links a {
-  font-size: 24px;
-  display: inline-block;
-  color: #b08657;
-  line-height: 1;
-  margin-right: 20px;
-  transition: 0.3s;
-}
-
-#hero .social-links a:hover {
-  color: #70573a;
-}
 
 @media (max-width: 992px) {
   #hero {
@@ -366,46 +395,13 @@ h6 {
     font-size: 25px;
     line-height: 24px;
   }
-}
 
-/*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
-section {
-  padding: 60px 0;
-  overflow: hidden;
-}
-
-.section-title {
-  text-align: center;
-  padding-bottom: 30px;
-}
-
-.section-title h2 {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-  color: #fff;
-  cursor: default;
-}
-
-.section-title h2::after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 40px;
-  height: 3px;
-  background: #b08657;
-  bottom: 0;
-  left: calc(50% - 20px);
-  border-radius: 20px;
-}
-
-.section-title p {
-  margin-bottom: 0;
-  cursor: default;
+  #media {
+    margin-top: 60px;
+    width: 330px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -435,7 +431,7 @@ section {
   margin-left: 23px;
   transition: all ease-in-out 0.3s;
   position: relative;
-  background-color: #2c2925;
+  background-color: #313131f1;
   text-align: center;
   border-radius: 8px;
   box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
@@ -446,7 +442,7 @@ section {
   margin: 0;
   width: 72px;
   height: 72px;
-  background: #be844d;
+  background: #37619e;
   border-radius: 50px;
   display: flex;
   align-items: center;
@@ -458,7 +454,7 @@ section {
   position: absolute;
   top: -36px;
   left: calc(50% - 36px);
-  border: 6px solid #be844d;
+  border: 6px solid #37619e;
 }
 
 .about-me .details h3 {
@@ -473,13 +469,13 @@ section {
 
 
 .about-me .service-item:hover .details h3 {
-  color: #be844d;
+  color: #407edb;
 }
 
 .about-me .service-item:hover .details .icon,
 .socials .service-item:hover .details .icon {
-  background-color: #be844d;
-  border: 2px solid #be844d;
+  background-color: #407edb;
+  border: 2px solid #407edb;
 }
 
 .about-me .service-item:hover .details .icon i {
@@ -492,71 +488,172 @@ section {
 
 
 /*--------------------------------------------------------------
-# Projects/ Info
+# Sections General
 --------------------------------------------------------------*/
-.projects .icon-box,
-.info .icon-box {
+section {
+  padding: 60px 0;
+  overflow: hidden;
+}
+
+.section-title {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+.section-title h2 {
+  font-size: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
   margin-bottom: 20px;
-  padding: 30px;
-  border-radius: 6px;
-  background: #2c2925;
-}
-
-.projects .icon-box i,
-.info .icon-box i {
-  float: left;
-  color: #fff;
-  font-size: 40px;
-  line-height: 0;
-  margin-top: 0.5em;
-}
-
-.projects .icon-box h4,
-.info .icon-box h4 {
-  margin-left: 70px;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 18px;
+  padding-bottom: 20px;
+  position: relative;
   color: #fff;
   cursor: default;
 }
 
-.projects .icon-box p,
-.info .icon-box p {
-  margin-left: 70px;
-  line-height: 24px;
-  font-size: 14px;
+.section-title h2::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 3px;
+  background: #37619e;
+  bottom: 0;
+  left: calc(50% - 20px);
+  border-radius: 20px;
+}
+
+.section-title p {
+  margin-bottom: 0;
+  cursor: default;
+}
+
+
+/*--------------------------------------------------------------
+# Skills
+--------------------------------------------------------------*/
+.skills .progress {
+  height: 60px;
+  display: block;
+  background: none;
+  border-radius: 0;
+}
+
+.skills .progress .skill {
+  padding: 10px 0;
+  margin: 0;
+  text-transform: uppercase;
+  display: block;
+  font-weight: 600;
+  font-family: 'Inter', sans-serif;
   color: #fff;
   cursor: default;
 }
 
-.btn-outline-download {
-  color: #be844d;
-  border-color: #be844d;
-  margin-top: 1em;
+.skills .progress .skill .val {
+  float: right;
+  font-style: normal;
+  cursor: default;
 }
 
-.btn-outline-download:hover {
-  color: #000;
-  background-color: #be844d;
+.skills .progress-bar-wrap {
+  background: #413a3b;
+  border-radius: 10px;
 }
 
-.operations-category {
-  font-weight: 700;
+.skills .progress-bar {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #37619e;
+  border-radius: 10px;
+}
+
+.skills-category {
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 26px;
+  cursor: default;
+}
+
+/*--------------------------------------------------------------
+# Resume
+--------------------------------------------------------------*/
+.resume .resume-title {
   font-size: 26px;
-  color: #b08657;
+  font-weight: 700;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #fff;
   cursor: default;
 }
 
-.qty-opsCat {
-  color: #a5875e;
+.resume .resume-item {
+  padding: 0 0 20px 20px;
+  margin-top: -2px;
+  border-left: 2px solid #37619e;
+  position: relative;
+  cursor: default;
 }
 
-@media (min-width: 768px) {
-  .col-md-6.opscat {
-    flex: 0 0 auto;
-    width: 100%;
-  }
+.resume .resume-item h4 {
+  line-height: 18px;
+  font-size: 18px;
+  font-weight: bolder;
+  text-transform: uppercase;
+  font-family: 'Inter', sans-serif;
+  color: #37619e;
+  margin-bottom: 10px;
+  cursor: default;
+}
+
+.resume .resume-item h5 {
+  font-size: 16px;
+  background: #37619e;
+  padding: 5px 15px;
+  display: inline-block;
+  font-weight: 600;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  cursor: default;
+}
+
+.resume .resume-item ul {
+  padding-left: 20px;
+}
+
+.resume .resume-item ul li {
+  padding-bottom: 10px;
+}
+
+.resume .resume-item:last-child {
+  padding-bottom: 0;
+}
+
+.resume .resume-item::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 5px;
+  background: #18191a;
+  border: 2px solid #37619e;
+  cursor: default;
+}
+
+.resume .resume-item-present::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 5px;
+  background: #37619e;
+  border: 2px solid #37619e;
+  cursor: default;
 }
 
 /*--------------------------------------------------------------
@@ -571,7 +668,7 @@ section {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: #494042;
+  background: #131c29;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -587,11 +684,12 @@ section {
   color: #fff;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
+  white-space: nowrap
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #b08657;
+  color: #407edb;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -603,13 +701,13 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  background: rgba(69, 80, 91, 0.8);
+  background: rgba(43, 60, 77, 0.863);
   border-radius: 8px;
 }
 
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: #7a4e22b0;
+  background: #223255bb;
   position: absolute;
   left: 30px;
   right: 30px;
@@ -694,7 +792,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #dbb488;
+  color: #407edb;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -740,14 +838,14 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #b08657;
+  border: 1px solid #37619e;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #b08657;
+  background-color: #37619e;
 }
 
-.portfolio-details .portfolio-info {
+.portfolio-details .portfolio-description {
   padding: 30px;
   background-color: #111111;
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
@@ -755,21 +853,22 @@ section {
   margin-bottom: 30px;
 }
 
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
+.portfolio-details .portfolio-description h3 {
+  font-size: 25px;
   font-weight: 700;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #eee;
+  cursor: default;
 }
 
-.portfolio-details .portfolio-info ul {
+.portfolio-details .portfolio-description ul {
   list-style: none;
   padding: 0;
-  font-size: 15px;
+  font-size: 19px;
 }
 
-.portfolio-details .portfolio-info ul li+li {
+.portfolio-details .portfolio-description ul li+li {
   margin-top: 10px;
 }
 
@@ -783,9 +882,15 @@ section {
 }
 
 .portfolio-details .portfolio-description h2 {
-  font-size: 26px;
+  font-size: 40px;
   font-weight: 700;
   margin-bottom: 20px;
+}
+
+.portfolio-details .portfolio-description h6 {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
 
 .portfolio-details .portfolio-description p {
@@ -799,11 +904,151 @@ section {
 .glightbox-clean .gslide-title {
   font-size: 1em;
   font-weight: 400;
-  font-family: "DM Sans";
+  font-family: 'Inter', sans-serif;
   color: #fff;
   margin-bottom: 19px;
   line-height: 1.4em;
 }
+
+.btn-outline-download {
+  color: #37619e;
+  border-color: #37619e;
+  margin-top: 1em;
+}
+
+.btn-outline-download:hover {
+  color: #000;
+  background-color: #37619e;
+}
+
+
+/*  */
+
+h6 a {
+  color: #fff;
+  font-size: 24px;
+}
+
+.port-cover.overlay:before {
+  background: rgba(0, 0, 0, 0.748);
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  backdrop-filter: blur(5px);
+}
+
+.port-cover > .container {
+  position: relative;
+  z-index: 2;
+}
+
+.port-cover, .port-cover .same-height {
+  padding: 3em 0;
+}
+
+.port-cover {
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+}
+
+.port-cover.single-page h1, .port-cover.single-page .h1 {
+  color: #fff;
+  font-size: clamp(2rem, 3vw, 5rem);
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.post-meta .author-figure img {
+  width: 30px;
+  border-radius: 50%;
+}
+
+.sidebar-box {
+  margin-bottom: 4em;
+  font-size: 15px;
+  width: 100%;
+  float: left;
+  background: #111111;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+}
+
+.sidebar-box .heading {
+  font-size: 25px;
+  color: #fff;
+  font-weight: 700;
+  margin: 20px;
+  margin-bottom: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+  cursor: default;
+}
+
+.port-entry-sidebar ul li, .port-entry-footer ul li {
+  list-style: none;
+  padding: 0 0 20px 0;
+  margin: 20px;
+}
+
+.port-entry-sidebar ul li a, .port-entry-footer ul li a {
+  display: table;
+  color: #fff;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-sidebar ul li a .text, .port-entry-footer ul li a img, .port-entry-footer ul li a .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-footer ul li a img {
+  width: 90px;
+}
+
+.rounded {
+  border-radius: 0.25rem !important;
+}
+
+.me-4 {
+  margin-right: 1.5rem !important;
+}
+
+.port-entry-sidebar ul li a .text h4, .port-entry-sidebar ul li a .text .h4, .port-entry-footer ul li a .text h4, .port-entry-footer ul li a .text .h4 {
+  font-size: 18px;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-sidebar ul li a .text, .port-entry-footer ul li a img, .port-entry-footer ul li a .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.sidebar-box *:last-child {
+  margin-bottom: 0;
+}
+
+.port-entry-sidebar ul, .port-entry-footer ul {
+  padding: 0;
+  margin: 0;
+}
+
+h4.sa-post {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.port-entry-sidebar .post-meta, .port-entry-footer .post-meta {
+  font-size: 14px;
+  color: #b3b3b3;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
@@ -839,7 +1084,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #b08657;
+  background: #37619e;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -849,12 +1094,6 @@ section {
   width: 36px;
   height: 36px;
   transition: 0.3s;
-}
-
-#footer .social-links a:hover {
-  background: #a80742;
-  color: #fff;
-  text-decoration: none;
 }
 
 #footer .copyright,
