--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,9 +136,9 @@ h6 {
 }
 
 @media (min-width: 991px) {
-  #main {
+  /* #main {
     margin-left: 100px;
-  }
+  } */
 
 
 }
@@ -720,6 +720,167 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Portfolio
+--------------------------------------------------------------*/
+.portfolio .portfolio-item {
+  margin-bottom: 30px;
+}
+
+.portfolio #portfolio-flters {
+  padding: 0;
+  margin: 0 auto 25px auto;
+  list-style: none;
+  text-align: center;
+  background: #131c29;
+  border-radius: 50px;
+  padding: 2px 15px;
+}
+
+.portfolio #portfolio-flters li {
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 5px;
+  transition: all 0.3s ease-in-out;
+  white-space: nowrap
+}
+
+.portfolio #portfolio-flters li:hover,
+.portfolio #portfolio-flters li.filter-active {
+  color: #407edb;
+}
+
+.portfolio #portfolio-flters li:last-child {
+  margin-right: 0;
+}
+
+.portfolio .portfolio-wrap {
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  background: rgba(43, 60, 77, 0.863);
+  border-radius: 8px;
+}
+
+.portfolio .portfolio-wrap::before {
+  content: "";
+  background: #223255bb;
+  position: absolute;
+  left: 30px;
+  right: 30px;
+  top: 30px;
+  bottom: 30px;
+  transition: all ease-in-out 0.3s;
+  z-index: 2;
+  opacity: 0;
+}
+
+.portfolio .portfolio-wrap .portfolio-info {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  z-index: 3;
+  transition: all ease-in-out 0.3s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio .portfolio-wrap .portfolio-info::before {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  top: 35px;
+  left: 35px;
+  border-top: 3px solid #d7dce1;
+  border-left: 3px solid #d7dce1;
+  transition: all 0.5s ease 0s;
+  z-index: 9994;
+}
+
+.portfolio .portfolio-wrap .portfolio-info::after {
+  display: block;
+  content: "";
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  bottom: 35px;
+  right: 35px;
+  border-bottom: 3px solid #d7dce1;
+  border-right: 3px solid #d7dce1;
+  transition: all 0.5s ease 0s;
+  z-index: 9994;
+}
+
+.portfolio .portfolio-wrap .portfolio-info h4 {
+  font-size: 20px;
+  color: #fff;
+  font-weight: 600;
+  cursor: default;
+}
+
+.portfolio .portfolio-wrap .portfolio-info p {
+  color: #fff;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
+  cursor: default;
+}
+
+.portfolio .portfolio-wrap .portfolio-links {
+  text-align: center;
+  z-index: 4;
+}
+
+.portfolio .portfolio-wrap .portfolio-links a {
+  color: #fff;
+  margin: 0 2px;
+  font-size: 28px;
+  display: inline-block;
+  transition: 0.3s;
+}
+
+.portfolio .portfolio-wrap .portfolio-links a:hover {
+  color: #407edb;
+}
+
+.portfolio .portfolio-wrap:hover::before {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+}
+
+.portfolio .portfolio-wrap:hover .portfolio-info {
+  opacity: 1;
+}
+
+.portfolio .portfolio-wrap:hover .portfolio-info::before {
+  top: 15px;
+  left: 15px;
+}
+
+.portfolio .portfolio-wrap:hover .portfolio-info::after {
+  bottom: 15px;
+  right: 15px;
+}
+
+/*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
 .portfolio-details {
@@ -740,14 +901,14 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #b08657;
+  border: 1px solid #be844d;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #b08657;
+  background-color: #be844d;
 }
 
-.portfolio-details .portfolio-info {
+.portfolio-details .portfolio-description {
   padding: 30px;
   background-color: #111111;
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
@@ -755,21 +916,22 @@ section {
   margin-bottom: 30px;
 }
 
-.portfolio-details .portfolio-info h3 {
-  font-size: 22px;
+.portfolio-details .portfolio-description h3 {
+  font-size: 25px;
   font-weight: 700;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #eee;
+  cursor: default;
 }
 
-.portfolio-details .portfolio-info ul {
+.portfolio-details .portfolio-description ul {
   list-style: none;
   padding: 0;
-  font-size: 15px;
+  font-size: 19px;
 }
 
-.portfolio-details .portfolio-info ul li+li {
+.portfolio-details .portfolio-description ul li+li {
   margin-top: 10px;
 }
 
@@ -783,9 +945,15 @@ section {
 }
 
 .portfolio-details .portfolio-description h2 {
-  font-size: 26px;
+  font-size: 40px;
   font-weight: 700;
   margin-bottom: 20px;
+}
+
+.portfolio-details .portfolio-description h6 {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
 
 .portfolio-details .portfolio-description p {
@@ -799,10 +967,149 @@ section {
 .glightbox-clean .gslide-title {
   font-size: 1em;
   font-weight: 400;
-  font-family: "DM Sans";
+  font-family: 'Inter', sans-serif;
   color: #fff;
   margin-bottom: 19px;
   line-height: 1.4em;
+}
+
+.btn-outline-download {
+  color: #be844d;
+  border-color: #be844d;
+  margin-top: 1em;
+}
+
+.btn-outline-download:hover {
+  color: #000;
+  background-color: #be844d;
+}
+
+
+/*  */
+
+h6 a {
+  color: #fff;
+  font-size: 24px;
+}
+
+.port-cover.overlay:before {
+  background: rgba(0, 0, 0, 0.748);
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  backdrop-filter: blur(5px);
+}
+
+.port-cover > .container {
+  position: relative;
+  z-index: 2;
+}
+
+.port-cover, .port-cover .same-height {
+  padding: 3em 0;
+}
+
+.port-cover {
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+}
+
+.port-cover.single-page h1, .port-cover.single-page .h1 {
+  color: #fff;
+  font-size: clamp(2rem, 3vw, 5rem);
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.post-meta .author-figure img {
+  width: 30px;
+  border-radius: 50%;
+}
+
+.sidebar-box {
+  margin-bottom: 4em;
+  font-size: 15px;
+  width: 100%;
+  float: left;
+  background: #111111;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+}
+
+.sidebar-box .heading {
+  font-size: 25px;
+  color: #fff;
+  font-weight: 700;
+  margin: 20px;
+  margin-bottom: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+  cursor: default;
+}
+
+.port-entry-sidebar ul li, .port-entry-footer ul li {
+  list-style: none;
+  padding: 0 0 20px 0;
+  margin: 20px;
+}
+
+.port-entry-sidebar ul li a, .port-entry-footer ul li a {
+  display: table;
+  color: #fff;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-sidebar ul li a .text, .port-entry-footer ul li a img, .port-entry-footer ul li a .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-footer ul li a img {
+  width: 90px;
+}
+
+.rounded {
+  border-radius: 0.25rem !important;
+}
+
+.me-4 {
+  margin-right: 1.5rem !important;
+}
+
+.port-entry-sidebar ul li a .text h4, .port-entry-sidebar ul li a .text .h4, .port-entry-footer ul li a .text h4, .port-entry-footer ul li a .text .h4 {
+  font-size: 18px;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-sidebar ul li a .text, .port-entry-footer ul li a img, .port-entry-footer ul li a .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.sidebar-box *:last-child {
+  margin-bottom: 0;
+}
+
+.port-entry-sidebar ul, .port-entry-footer ul {
+  padding: 0;
+  margin: 0;
+}
+
+h4.sa-post {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.port-entry-sidebar .post-meta, .port-entry-footer .post-meta {
+  font-size: 14px;
+  color: #b3b3b3;
 }
 
 /*--------------------------------------------------------------
